removed horrible CSS inline hack - Shish now has a single file CSS deamon maker tweaked frag link colour (links were invisible until rollover) editor highlights CC licence type (issue #808)

--- a/src/civicboom/public/styles/web/_layout.scss
+++ b/src/civicboom/public/styles/web/_layout.scss
@@ -84,7 +84,7 @@ BODY>DIV#app {
     		}
         
         a {
-            color: $link-frag-colour;
+            //color: $link-frag-colour; // link-frag-colour is depricated
             text-decoration: none;
             		
             &:hover {
